# ml

./: .gitignore  .gitmodules  README.md  hust_ic_sync.sh  pyproject.toml  requirements.txt  test.sh
benchmark/: evaluator.py
benchmark/llm/: wikitext.py
benchmarks/: llm.py
benchmarks/bench_backend/: __init__.py
core/: __init__.py  evaluator.py  hf.py  logger.py  trainer.py
core/data/: __init__.py
core/eval/: __init__.py  evaluator.py  llm.py
core/eval/bench_backend/: wikitext.py
core/models/: __init__.py
core/models/cnn/: __init__.py  cbam.py  contrast_trainer.py  trainer.py
core/models/gan/: __init__.py  base_trainer.py  ctrainer.py  minibatch.py  sn.py  trainer.py  wtrainer.py
core/models/gnn/: __init__.py  base.py  base_trainer.py  heads.py  loss.py
core/models/lip-sync/: __init__.py
core/models/transformer/: __init__.py  attns.py  decoder.py  encoder.py  gpt.py  gpt2.py  lgcm.py  rope.py  trainer.py
core/models/tts/: __init__.py
core/models/vae/: __init__.py  trainer.py  vae.py
core/sys/: __init__.py  editor.py  infra_opt.py  onnx_optimizer.py  pruning.py  tracer.py  utils.py
core/sys/compute_graph/: __init__.py
core/sys/fx/: editor.py  tracer.py
core/sys/pruning/: __init__.py  pruner.py  utils.py
core/sys/quantization/: __init__.py  awq.py  quantizer.py
core/utils/: __init__.py  loader.py  printshape.py  tensor_processor.py
docs/: README.md
scripts/: test_trtrt.sh  unittest.sh
src/ml/: __init__.py  iter.py  logger.py  trainer.py
src/ml/rl/: agent.py  (+2 more)
tests/algorithms/: test_kvcache.py
tests/models/: test_kvcache.py
(+307 files in other folders)
