[project]
name = "ml"
version = "0.3.0"
description = "Dashygo's ML workflow"
readme = "README.md"
authors = [
    { name = "dashygo097", email = "dashygo097@github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "brevitas>=0.10.2",
    "gymnasium>=1.2.2",
    "matplotlib>=3.10.8",
    "onnx>=1.20.0",
    "openai>=2.11.0",
    "pandas>=2.3.3",
    "ptflops>=0.7.5",
    "pyyaml>=6.0.3",
    "termcolor>=3.2.0",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
]

[project.scripts]
ml = "ml:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
